feat(files): harden image uploads and add tests